[package]
name = "ray-tracing-in-one-weekend"
version = "0.1.0"
authors = ["Berkay Dinç <berkayydinc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="lib"
path="src/lib.rs"

[[bin]]
name="main"
path="src/main.rs"

[dependencies]
rand = "0.8.3"
crossbeam-utils = "0.8.3"
